--- a/src/assets/i18n/Portuguese.json
+++ b/src/assets/i18n/Portuguese.json
@@ -56,7 +56,8 @@
     "domains": "Domínios",
     "crawler": "Crawler",
     "pages": "Páginas",
-    "settings": "Definições"
+    "settings": "Definições",
+    "usability": "Usabilidade"
   },
   "HOME_PAGE": {
     "title": "Bem vindo",
@@ -952,6 +953,16 @@
     "TOOLTIP": {
       "depth": "Escreva 1 para procurar páginas diretamente ligadas à página inicial",
       "pages": "Escreva 0 para procurar todas as páginas"
+    }
+  },
+  "USABILITY_PAGE": {
+    "LIST": {
+      "title": "Checklists de Usabilidade",
+      "subtitle": "Lista de todas as checklists de usabilidade",
+      "table": {
+        "_id_label": "id",
+        "createdAt_label": "Criado em"
+      }
     }
   },
   "IMPORT": {
