Preliminary implementation of checklist detail view.

--- a/src/assets/i18n/English.json
+++ b/src/assets/i18n/English.json
@@ -1051,6 +1051,7 @@
       "subtitle": "Lista of all usability checklists",
       "table": {
         "_id_label": "id",
+        "processed_label": "Processed",
         "createdAt_label": "Created at"
       }
     }
